[gd_scene load_steps=8 format=2]

[ext_resource path="res://wooden crate.png" type="Texture" id=1]
[ext_resource path="res://crate.gd" type="Script" id=2]
[ext_resource path="res://crate piece 2.png" type="Texture" id=3]
[ext_resource path="res://crate piece 3.png" type="Texture" id=4]
[ext_resource path="res://crate piece 1.png" type="Texture" id=5]
[ext_resource path="res://broken crate.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Crate" type="RigidBody2D" groups=["bodies"]]
collision_layer = 32
collision_mask = 31
mass = 100.0
gravity_scale = 0.0
linear_damp = 2.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Broken" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="piece1" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="piece2" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="piece3" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]
